--- a/app/src/main/res/layout/fragment_expanded_interface.xml
+++ b/app/src/main/res/layout/fragment_expanded_interface.xml
@@ -162,7 +162,7 @@
             app:backgroundTint="@null"
             android:textColor="@color/purple_100"
             app:layout_constraintBottom_toTopOf="@+id/button_3"
-            app:layout_constraintEnd_toStartOf="@+id/button_subtract"
+            app:layout_constraintEnd_toStartOf="@+id/button_subtract_advanced"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/button_5"
             app:layout_constraintTop_toBottomOf="@+id/button_9" />
@@ -244,10 +244,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/button_3"
-            app:layout_constraintTop_toBottomOf="@+id/button_subtract" />
+            app:layout_constraintTop_toBottomOf="@+id/button_subtract_advanced" />
 
         <Button
-            android:id="@+id/button_subtract"
+            android:id="@+id/button_subtract_advanced"
             style="@style/scientific_button"
             android:text="@string/buttonSubtract_text"
             android:background="@color/Grey_200"
@@ -264,7 +264,7 @@
             android:text="@string/buttonMultiply_text"
             android:background="@color/Grey_200"
             app:backgroundTint="@null"
-            app:layout_constraintBottom_toTopOf="@+id/button_subtract"
+            app:layout_constraintBottom_toTopOf="@+id/button_subtract_advanced"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/button_9"
